--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": "5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
