--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "guzzlehttp/guzzle": "5.*"
+        "php": ">=5.3.0",
+        "guzzle/guzzle": "~3.7"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
